Some minor refactoring with getting output logic